[package]
name = "ddnet-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
lazy_static = "1.5.0"
prometheus = "0.14.0"
tokio = { version = "1.47.0", features = ["full"] }
regex = "1.11.1"
log = "0.4.27"
ddapi-rs = "0.6.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
envy = "0.4.2"
anyhow = "1.0.98"
